<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Apartments</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="place">Place</string>
    <string name="nbr_of_rooms">Number of rooms</string>
    <string name="price">Price</string>
    <string name="btn_add">Add apartment</string>
    <string name="title_activity_show_apartment">Show Last Apartment</string>
    <string name="chf">CHF</string>
    <string name="show_apartment">Show Apartment</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="version">Version 1.0</string>
    <string name="min_android">Min Version: Android 7.0 (Nougat)</string>
    <string name="min_sdk">Min SDK Version: Level 24</string>
    <string name="share">Share</string>
</resources>