<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <EditText
        android:id="@+id/main_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:paddingTop="30dp"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/main_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/postcode"
        android:inputType="numberSigned"
        android:paddingTop="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/main_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/place"
        android:paddingTop="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/main_nbr_of_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nbr_of_rooms"
        android:inputType="numberDecimal"
        android:paddingTop="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/main_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:paddingTop="30dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/main_LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/btn_add"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>